# landing-backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: contact.py  health.py  metrics.py
app/core/: config.py  exceptions.py  logging.py  middleware.py
app/db/: __init__.py  models.py  session.py
app/models/: common.py  contact.py  metrics.py
app/repositories/: contact_repository.py  json_repository.py  metrics_repository.py  rate_limit_repository.py
app/services/: ai_service.py  contact_service.py  email_service.py  metrics_service.py  rate_limit_service.py
static/: app.js  index.html  style.css
tests/: test_api.py  test_db.py
