[tool.poetry]
name = "landing-backend"
version = "0.1.0"
description = "FastAPI backend service for landing contact form with AI integration"
authors = ["Backend Developer <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = { extras = ["email"], version = "^2.8.0" }
pydantic-settings = "^2.4.0"
openai = "^1.40.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.51"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
